WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150135
REGRESSION(
r190882
): Concatenating a character array and an empty string is broken.
https://bugs.webkit.org/show_bug.cgi?id=150135
Summary
REGRESSION(r190882): Concatenating a character array and an empty string is b...
Andreas Kling
Reported
2015-10-14 12:29:11 PDT
Fix coming
Attachments
Patch
(3.65 KB, patch)
2015-10-14 12:30 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2015-10-14 12:30:38 PDT
Created
attachment 263098
[details]
Patch
Geoffrey Garen
Comment 2
2015-10-14 12:54:22 PDT
Comment on
attachment 263098
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2015-10-14 13:45:48 PDT
Comment on
attachment 263098
[details]
Patch Clearing flags on attachment: 263098 Committed
r191069
: <
http://trac.webkit.org/changeset/191069
>
WebKit Commit Bot
Comment 4
2015-10-14 13:45:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug