REGRESSION(r190882): Concatenating a character array and an empty string is broken. <https://webkit.org/b/150135>

Reviewed by Geoffrey Garen.

Source/WTF:

StringAdapter templates for raw character arrays were always using 1 as the array length
in toString().

* wtf/text/StringConcatenate.h:

Tools:

Add a new WTF API test that covers this issue.

* TestWebKitAPI/Tests/WTF/StringOperators.cpp:
(TestWebKitAPI::build):
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/168275@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191069 268f45cc-cd09-0410-ab3c-d52691b4dbfc